metadata-classic/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ChatCaseMinutesOpen__c</fullName>
        <description>Used to calculate the number of minutes a Live Chat case has been open. Specifically used to  find cases left open because a chat never fully initiated, on the X - Guest User case view.</description>
        <formula>If(
AND(
RecordTypeId = &quot;0123100000169kP&quot;,
IsClosed = False),
(NOW() - CreatedDate) * 1440,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chat Case Minutes Open</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosedDateMinusOne__c</fullName>
        <description>Used in specific Case reports that use the THIS WEEK or LAST WEEK date range based on the Closed date, to automatically match Thumbtack&apos;s work week, allowing for automation of weekly reports and dashboards.</description>
        <formula>ClosedDate - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Date (Minus One)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comment field use for anytime general comments are needed.</description>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactEmailRouting__c</fullName>
        <description>Text field populated via workflow rule field update that copies the value from the Contact__r.EmailRouting__c field.  Used in case routing to specialized teams.</description>
        <label>Contact Email Routing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <description>Formula field to display the associated contact&apos;s first name.  Used in email templates.</description>
        <formula>Contact.FirstName</formula>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactIsSpam__c</fullName>
        <description>Used in email message workflow rules.</description>
        <formula>IF(
ISPICKVAL(Contact.EmailRouting__c, &quot;Route to Spam&quot;),true,false 
)</formula>
        <label>Contact Is Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <description>Formula field to display the associated contact&apos;s last name.  Used in email templates.</description>
        <formula>Contact.LastName</formula>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhoneRouting__c</fullName>
        <description>Formula field to bring over the Contact.PhoneRouting__c field value; used for case list views.</description>
        <formula>TEXT(Contact.PhoneRouting__c)</formula>
        <label>Contact Phone Routing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <label>DNIS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DNSRequestReason__c</fullName>
        <description>The agent&apos;s reason for requesting this case to not be surveyed.</description>
        <inlineHelpText>The agent&apos;s reason for requesting this case to not be surveyed.</inlineHelpText>
        <label>DNS Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Requested</fullName>
                </value>
                <value>
                    <fullName>Pro Requested</fullName>
                </value>
                <value>
                    <fullName>We never communicated with this pro/customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNS_Request_Details__c</fullName>
        <description>The Agent&apos;s details as to why this case should not be surveyed.</description>
        <inlineHelpText>Your details as to why this case should not be surveyed. Please be specific!</inlineHelpText>
        <label>DNS Request Details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastStatusChange__c</fullName>
        <description>Counts the number of days since the case was last modified. If the case is closed the value is 0.</description>
        <formula>IF(
OR( ISPICKVAL(Status, &apos;New&apos;) ,ISPICKVAL(Status, &apos;Pending Customer&apos;), ISPICKVAL(Status, &apos;Pending Thumbtack&apos;)),
NOW() - LastStatusChangeDate__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Status Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Directly__Directly_Category__c</fullName>
        <description>The Directly Category to use for applying reward rates, routing and escalation rules to this case when opened to experts.</description>
        <inlineHelpText>The Directly Category to use for applying reward rates, routing and escalation rules to this case when opened to experts.</inlineHelpText>
        <label>Directly Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Directly__Directly_Crowd_Status__c</fullName>
        <label>Open to Directly Experts?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
                <value>
                    <fullName>Predictive Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Directly__Directly_Status__c</fullName>
        <description>Indicates whether or not this Case has been opened to the crowd.</description>
        <inlineHelpText>This field should be set by Directly based on events that have happened in the crowd.</inlineHelpText>
        <label>Directly Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed - Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed - Expired</fullName>
                </value>
                <value>
                    <fullName>Closed - Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Directly__Directly_Trigger_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activate trigger to close this case in the crowd.</description>
        <label>Directly Trigger Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directly__Send_to_Directly_Predictive__c</fullName>
        <description>Internal Directly field to control whether or not Case should be sent to Directly&apos;s predictive routing engine.</description>
        <inlineHelpText>Internal Directly field to control whether or not Case should be sent to Directly&apos;s predictive routing engine. Should not be updated manually.</inlineHelpText>
        <label>Send to Directly Predictive?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisputeIdHash__c</fullName>
        <description>Placeholder field for solution center front end to pass over the dispute ID hash so we can use that to lookup and set the Dispute__c value.  We do not write a value to this field, only used in VRMO controller.</description>
        <inlineHelpText>Placeholder field for solution center front end to pass over the dispute ID hash so we can use that to lookup and set the Dispute__c value.  We do not write a value to this field, only used in VRMO controller.</inlineHelpText>
        <label>Dispute Id Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisputeReason__c</fullName>
        <description>Picklist to further classify the dispute.</description>
        <label>Dispute Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Review bug</fullName>
                </value>
                <value>
                    <fullName>No interaction</fullName>
                </value>
                <value>
                    <fullName>Duplicate update</fullName>
                </value>
                <value>
                    <fullName>Personal identifiable info/pictures</fullName>
                </value>
                <value>
                    <fullName>Blacklisted words</fullName>
                </value>
                <value>
                    <fullName>Review/update posted outside reasonable amount of time</fullName>
                </value>
                <value>
                    <fullName>Request violates user guidelines</fullName>
                </value>
                <value>
                    <fullName>Review intended for TT/Not related</fullName>
                </value>
                <value>
                    <fullName>Fake reviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dispute that the case originated from.</description>
        <label>Dispute</label>
        <referenceTo>Dispute__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DoNotSurvey__c</fullName>
        <description>Picklist field that allows users to mark if a CSAT should not be sent.  Permission granted to this field only via a permission set.</description>
        <label>Do Not Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketplace Integrity</fullName>
                </value>
                <value>
                    <fullName>Customer/Pro Requested</fullName>
                </value>
                <value>
                    <fullName>Abusive Pro/Customer</fullName>
                </value>
                <value>
                    <fullName>Special Projects</fullName>
                </value>
                <value>
                    <fullName>QA Audit</fullName>
                </value>
                <value>
                    <fullName>Sys Admin Bulk Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DuplicateOf__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter duplicate cade Id.</description>
        <label>Duplicate Of</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ElapsedSurveyHours__c</fullName>
        <description>Formula field to display the time between the Case Closed Date and the Contact Last Surveyed Date, in Hours.</description>
        <formula>(ClosedDate - Contact.LastSurveyed__c)*24</formula>
        <label>Elapsed Survey Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailFilterMatched__c</fullName>
        <label>Email Filter Matched</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rule 1</fullName>
                </value>
                <value>
                    <fullName>Rule 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailMessageSignatureWoNamePhone__c</fullName>
        <formula>&quot;The Thumbtack Support Team&quot; &amp; BR() 
&amp; BR() 
&amp;&quot;Still have questions? Visit our &quot; &amp; HYPERLINK(&quot;http://help.thumbtack.com&quot;, &quot;Help Center&quot;)&amp; &quot; to browse articles and chat with us 24 hours a day.&quot; &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Message Signature w/o Name &amp; Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailMessageSignature__c</fullName>
        <description>Formula field used as a merge field on Pro or Customer facing email templates based on case conditions.</description>
        <formula>IF( 
Team__c = &apos;Marketplace Integrity&apos;, 
HandleFirstName__c &amp; BR() 
&amp;&quot;Marketplace Trust and Safety Team&quot; &amp; BR() ,
IF( 
OR( 
ISPICKVAL(Origin,&apos;LiveOps Inbound Support Call&apos;), 
ISPICKVAL(Origin, &apos;Voicemail&apos;), 
ISPICKVAL(Origin, &apos;Engagement Outbound Call&apos;) 
), 
HandleFirstName__c &amp; BR() 
&amp;&quot;The Thumbtack Support Team&quot; &amp; BR() 
&amp;&quot;800-948-2034&quot; &amp; BR() 
&amp; BR() 
&amp;&quot;Still have questions? Visit our &quot; &amp; HYPERLINK(&quot;http://help.thumbtack.com&quot;, &quot;Help Center&quot;)&amp; &quot; to browse articles and chat with us 24 hours a day.&quot; &amp; BR() 
, 
HandleFirstName__c &amp; BR() 
&amp;&quot;The Thumbtack Support Team&quot; &amp; BR() 
&amp; BR() 
&amp;&quot;Still have questions? Visit our &quot; &amp; HYPERLINK(&quot;http://help.thumbtack.com&quot;, &quot;Help Center&quot;)&amp; &quot; to browse articles and chat with us 24 hours a day.&quot; &amp; BR() 
))</formula>
        <label>Email Mesage Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailMessageSubject__c</fullName>
        <description>Formula field to display certain text based on the origin of the case.  Used as an email template merge field.</description>
        <formula>IF( ManualCaseCreation__c = TRUE, Subject,
IF( 
OR( ISPICKVAL(Origin,&apos;Email&apos;), 
ISPICKVAL(Origin,&apos;Web&apos;) 
),(&apos;Re: &apos; + Subject), 
&apos;Follow-up from Thumbtack Support&apos; 
))</formula>
        <label>Email Message Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalatedDate__c</fullName>
        <description>The date/time the case was escalated.  Populated via workflow.</description>
        <label>Escalated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstResponseDate__c</fullName>
        <description>Date/Time of the initial response to the pro or customer.</description>
        <label>First Response Date</label>
        <summarizedField>CaseUpdateHistory__c.ToDate__c</summarizedField>
        <summaryFilterItems>
            <field>CaseUpdateHistory__c.CasePreviousStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>CaseUpdateHistory__c.Case__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FirstResponseTimeHours__c</fullName>
        <description>Formula field to calculate the first response time in hours</description>
        <formula>(FirstResponseDate__c - CreatedDate)*24</formula>
        <label>First Response Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstResponseTimeMins__c</fullName>
        <description>Formula field to calculate the first response time in minutes.</description>
        <formula>(FirstResponseDate__c - CreatedDate)*1440</formula>
        <label>First Response Time (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstThumbtackResponse__c</fullName>
        <description>First date/time a TT employee responded to a case</description>
        <inlineHelpText>First date/time a TT employee responded to a case</inlineHelpText>
        <label>First Thumbtack Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9EmailNotificationStatus__c</fullName>
        <label>Five9 Email Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five9__Five9LastEmailMessageId__c</fullName>
        <label>Five9 LastEmailMessageId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ThreadId__c</fullName>
        <formula>&quot;[ ref:_&quot;&amp;LEFT( $Organization.Id , 4)&amp;&quot;0&quot;&amp;RIGHT( $Organization.Id , 4)&amp;&quot;._&quot;&amp;LEFT(Id , 4)&amp;&quot;0&quot;&amp;RIGHT(Id , 5)&amp;&quot;:ref ]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9 ThreadId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <description>Field used to indicate the date the case should have a follow-up activity.</description>
        <label>Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FollowUpNote__c</fullName>
        <description>Open text area to write notes for follow-up activities.</description>
        <label>Follow Up Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FortyEightHours__c</fullName>
        <label>FortyEightHours</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GrantTestSurveyAlreadyOffered__c</fullName>
        <formula>OR(
ElapsedSurveyHours__c &gt; 24,
AND(ElapsedSurveyHours__c &gt;= -1, ElapsedSurveyHours__c &lt; 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Test - Survey Already Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HandleFirstName__c</fullName>
        <description>Formula field to bring over the Case Owner&apos;s alternate email signature first name, as stored on the User record.  Used in email templates or external communication to pros/customers.</description>
        <formula>IF(Owner:User.HandleFirstName__c=&quot;&quot;,Owner:User.FirstName,
Owner:User.HandleFirstName__c)</formula>
        <label>Handle First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelpCenterVisitLastArticleId__c</fullName>
        <description>The id of the last article visited on the help center before the case was created.</description>
        <label>Help Center Visit Last Article Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HelpCenterVisitLastArticle__c</fullName>
        <description>The last visited help center article.</description>
        <label>Help Center Visit Last Article</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HelpCenterVisitSubTopic__c</fullName>
        <description>The sub-topic of the last visited help center article.</description>
        <label>Help Center Visit Sub Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HelpCenterVisitTopic__c</fullName>
        <description>The topic of the last visited help center article.</description>
        <label>Help Center Visit Topic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HoursSinceCreation__c</fullName>
        <formula>(NOW() - CreatedDate ) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InboundEnrollmentDisposition__c</fullName>
        <label>Inbound Enrollment Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sign up</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Not a Thumbtack category</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Wrong number</fullName>
                </value>
                <value>
                    <fullName>Already with Thumbtack</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the relationship between Cases and Incidents.</description>
        <label>MI Incident</label>
        <referenceTo>MIIncident__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncomingEmailMessageToAddress__c</fullName>
        <description>The To: Address for the incoming email messsage when the case was created.</description>
        <label>Incoming Email Message To Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsMyTeam__c</fullName>
        <description>Formula field to indicate true if the Logged in User&apos;s Team matches the Team stamped on the case.  Used for dynamic list views, reports, and dashboards.</description>
        <formula>IF(ISBLANK(Team__c), False,
IF(TEXT($User.SpoofAsTeam__c) = Team__c, True,
IF(AND(ISBLANK(TEXT($User.SpoofAsTeam__c)),TEXT($User.Team__c) = Team__c), True,
False)))</formula>
        <label>Is My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox marked true if case is test data.</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KDEligible__c</fullName>
        <label>KD Eligible</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastAppliedMacro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Custom lookup field that will be set upon a macro used.</description>
        <label>Last Applied Macro</label>
        <referenceTo>Macro</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastMacroAppliedName__c</fullName>
        <description>Formula to pull the name of the last macro applied for use in CSAT to macro comparisons.</description>
        <formula>LastAppliedMacro__r.Name</formula>
        <label>Last Macro Applied Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastQueueEnteredDate__c</fullName>
        <description>The date/time the case entered the last queue.</description>
        <label>Last Queue Entered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastQueue__c</fullName>
        <description>Text field to house the last queue that the case was owned by.</description>
        <label>Last Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStatusChangeDate__c</fullName>
        <description>The last date/time that the case status changed.</description>
        <label>Last Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MIAmountinQuestion__c</fullName>
        <label>MI: Amount in Question</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIBestTimetoContactInfo__c</fullName>
        <description>Open text area to store information about the best time to contact, time zone or location of the person contacting us about the MI issue.</description>
        <label>MI: Best Time to Contact Info</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MICaseCustomer__c</fullName>
        <description>Formula field to indicate true if the Case Account ID matches the related MI Incident Customer Account ID</description>
        <formula>IF(AND(AccountId = Incident__r.CustomerAccount__r.Id,NOT ISBLANK(AccountId)), True, False)</formula>
        <label>MI Case - Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICasePrimaryCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to indicate the case is the primary Pro case for the MI Incident.</description>
        <label>MI Case Primary - Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICasePrimaryPro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to indicate true if the case is the primary customer case for the MI incident.</description>
        <label>MI Case Primary - Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICasePro__c</fullName>
        <description>Formula field to indicate true if the Case Account ID matches the MI Incident Pro Account ID.</description>
        <formula>IF(AND(AccountId = Incident__r.ProAccount__r.Id,NOT ISBLANK(AccountId)), True, False)</formula>
        <label>MI Case - Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICategory__c</fullName>
        <description>Marketplace Integrity Category</description>
        <inlineHelpText>Marketplace Integrity Category</inlineHelpText>
        <label>MI Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Background</fullName>
                </value>
                <value>
                    <fullName>Certification Agreement</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Dispute About Customer</fullName>
                </value>
                <value>
                    <fullName>Dispute About Professional</fullName>
                </value>
                <value>
                    <fullName>Follow Up with Customer</fullName>
                </value>
                <value>
                    <fullName>Follow Up with Professional</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MICustomerID__c</fullName>
        <label>MI: Customer ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIDoNotRelateIncident__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in code to indicate if the case should be disassociated from the open mi incident.</description>
        <label>MI: Do Not Relate Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIEmailMessageWarningDate__c</fullName>
        <description>Formula field used as a merge field in email templates for Marketplace Integrity.</description>
        <formula>TEXT(MONTH(DATEVALUE(   Account.MICustomerExperienceWarningDate__c   )))+&quot;/&quot; +TEXT(DAY(DATEVALUE(Account.MICustomerExperienceWarningDate__c)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Account.MICustomerExperienceWarningDate__c)))</formula>
        <label>MI Email Message Warning Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIEncodedId__c</fullName>
        <description>The Thumbtack user encoded ID as used by fides integration.</description>
        <label>MI: Encoded ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncidentCustomerFirstName__c</fullName>
        <formula>Incident__r.CustomerAccount__r.usr_first_name__c</formula>
        <label>MI Incident Customer First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncidentEligiblity__c</fullName>
        <description>Formula field to bring over the PDG Eligibility field from the MI Incident to the Case; used in list view filtering.</description>
        <formula>IF( NOT ISBLANK(Incident__c), Incident__r.PDGEligibility__c,&apos;&apos;
)</formula>
        <label>MI Incident Eligiblity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncidentOwnerId__c</fullName>
        <formula>CASESAFEID( Incident__r.OwnerId )</formula>
        <label>MI Incident Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncidentProName__c</fullName>
        <description>Formula field to bring over the pro&apos;s name associated with the linked MI Incident.</description>
        <formula>Incident__r.ProAccount__r.Name</formula>
        <label>MI Incident Pro Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIIncidentStatus__c</fullName>
        <description>Formula field to display the MI Incident status.  Used in case list views for the MI team.</description>
        <formula>TEXT(Incident__r.Status__c)</formula>
        <label>Incident Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MINotes__c</fullName>
        <description>Open text area to allow users with the Marketplace Integrity permission set to enter MI only notes about the interaction with the Pro or Customer.</description>
        <label>MI Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MIOutcome__c</fullName>
        <description>Picklist of values to describe the case outcome for proactive-like marketplace trust and safety cases.</description>
        <label>MI Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SubCategory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mismatch</fullName>
                </value>
                <value>
                    <fullName>No badge</fullName>
                </value>
                <value>
                    <fullName>No longer on site</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Failed BGC</fullName>
                </value>
                <value>
                    <fullName>Insufficient info</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pending signature</fullName>
                </value>
                <value>
                    <fullName>Violation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIPreferredPhoneorEmail__c</fullName>
        <description>Open text area to store the preferred phone or email address of the person contacting us about the MI issue.  May be different from the Case Contact details.</description>
        <label>MI: Preferred Phone or Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIProID__c</fullName>
        <label>MI: Pro ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIQuoteID__c</fullName>
        <description>The quote ID as entered by the CS Agent on the MI Case Transfer flow.</description>
        <label>MI: Quote ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>